--- a/packages/components/App/package.json
+++ b/packages/components/App/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/app",
-  "version": "0.0.2-alpha.7",
+  "version": "1.0.0-prealpha.1",
   "svelte": "src/index.js",
   "files": [
     "src/"
@@ -16,13 +16,13 @@
     "build:dev": "exit 0"
   },
   "dependencies": {
-    "@mamba/dialog": "^0.0.2-alpha.7"
+    "@mamba/dialog": "^1.0.0-prealpha.1"
   },
   "devDependencies": {
-    "@mamba/styles": "^0.0.2-alpha.7"
+    "@mamba/styles": "^1.0.0-prealpha.1"
   },
   "peerDependencies": {
-    "@mamba/pos": "^0.0.2-alpha.7",
+    "@mamba/pos": "^1.0.0-prealpha.1",
     "svelte-page": "^0.0.5"
   }
 }
