--- a/packages/components/Collection/package.json
+++ b/packages/components/Collection/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/collection",
-  "version": "0.0.2-alpha.7",
+  "version": "1.0.0-prealpha.1",
   "svelte": "src/index.js",
   "files": [
     "src/"
@@ -19,7 +19,7 @@
     "svelte-page": "^0.0.5"
   },
   "dependencies": {
-    "@mamba/icon": "^0.0.2-alpha.7",
-    "@mamba/styles": "^0.0.2-alpha.7"
+    "@mamba/icon": "^1.0.0-prealpha.1",
+    "@mamba/styles": "^1.0.0-prealpha.1"
   }
 }
