--- a/packages/components/Progress/package.json
+++ b/packages/components/Progress/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/progress",
-  "version": "0.0.2-alpha.7",
+  "version": "1.0.0-prealpha.1",
   "svelte": "src/index.js",
   "files": [
     "src/",
@@ -18,6 +18,6 @@
     "build:dev": "exit 0"
   },
   "dependencies": {
-    "@mamba/styles": "^0.0.2-alpha.7"
+    "@mamba/styles": "^1.0.0-prealpha.1"
   }
 }
