--- a/packages/components/QRCode/package.json
+++ b/packages/components/QRCode/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/qrcode",
-  "version": "0.0.2-alpha.7",
+  "version": "1.0.0-prealpha.1",
   "svelte": "src/index.js",
   "files": [
     "src/"
@@ -17,7 +17,7 @@
     "build:dev": "exit 0"
   },
   "dependencies": {
-    "@mamba/styles": "^0.0.2-alpha.7",
+    "@mamba/styles": "^1.0.0-prealpha.1",
     "qrious": "^4.0.2"
   }
 }
