--- a/packages/components/Switch/package.json
+++ b/packages/components/Switch/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/switch",
-  "version": "0.0.2-alpha.7",
+  "version": "1.0.0-prealpha.1",
   "svelte": "src/index.js",
   "files": [
     "src/"
@@ -17,6 +17,6 @@
     "build:dev": "exit 0"
   },
   "devDependencies": {
-    "@mamba/styles": "^0.0.2-alpha.7"
+    "@mamba/styles": "^1.0.0-prealpha.1"
   }
 }
