--- a/packages/configs/package.json
+++ b/packages/configs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/configs",
-  "version": "0.0.2-alpha.7",
+  "version": "1.0.0-prealpha.1",
   "description": "Tool config presets for use in mamba projects.",
   "author": "Stone Payments - Mamba Team",
   "contributors": [
