--- a/packages/pos/package.json
+++ b/packages/pos/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/pos",
-  "version": "0.0.2-alpha.7",
+  "version": "1.0.0-prealpha.1",
   "description": "Mamba web environment wrapper and simulator",
   "author": "Stone Payments - Mamba Team",
   "contributors": [
@@ -14,6 +14,6 @@
     "prepublishOnly": "exit 0; npm run build"
   },
   "dependencies": {
-    "@mamba/switch": "^0.0.2-alpha.7"
+    "@mamba/switch": "^1.0.0-prealpha.1"
   }
 }
