--- a/package.json
+++ b/package.json
@@ -76,16 +76,17 @@
     "@babel/plugin-transform-modules-commonjs": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@gen/rollup-plugin-generate-html": "^0.1.1",
-    "svelte-page": "^0.0.6",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^9.0.0",
     "babel-jest": "^23.4.2",
-    "babel-loader": "^8.0.0",
+    "babel-loader": "^8.0.2",
     "case": "^1.5.5",
     "chalk": "^2.4.1",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
+    "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.0",
+    "eslint": "^5.5.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "^3.0.1",
     "eslint-loader": "^2.1.0",
@@ -95,7 +96,6 @@
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-promise": "^4.0.0",
-    "eslint": "^5.4.0",
     "file-loader": "^2.0.0",
     "filemanager-webpack-plugin": "^2.0.4",
     "globby": "^8.0.1",
@@ -105,7 +105,7 @@
     "identity-obj-proxy": "^3.0.0",
     "inquirer": "^6.2.0",
     "jest": "^23.5.0",
-    "jsbarcode": "^3.9.0",
+    "jsbarcode": "^3.11.0",
     "json-loader": "^0.5.7",
     "lint-staged": "^7.2.2",
     "mini-css-extract-plugin": "^0.4.2",
@@ -114,6 +114,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "page": "^1.8.6",
     "pkg-dir": "^3.0.0",
+    "postcss": "^7.0.2",
     "postcss-advanced-variables": "^2.3.3",
     "postcss-atroot": "^0.1.3",
     "postcss-calc": "^6.0.1",
@@ -127,14 +128,14 @@
     "postcss-property-lookup": "^2.0.0",
     "postcss-reporter": "^6.0.0",
     "postcss-syntax": "^0.33.0",
-    "postcss": "^7.0.2",
     "prettier": "^1.14.2",
     "progress-bar-webpack-plugin": "^1.11.0",
     "qrious": "^4.0.2",
     "quickenv": "^0.0.6",
     "resolve-url-loader": "^2.3.0",
     "rimraf": "^2.6.2",
-    "rollup-plugin-babel": "^4.0.2",
+    "rollup": "^0.65.0",
+    "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-clear": "^2.0.7",
     "rollup-plugin-commonjs": "^9.1.6",
     "rollup-plugin-copy": "^0.2.3",
@@ -142,31 +143,31 @@
     "rollup-plugin-filesize": "^4.0.1",
     "rollup-plugin-fill-html": "^1.1.0",
     "rollup-plugin-livereload": "^0.6.0",
-    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-rebase": "^2.0.3",
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-serve": "^0.4.2",
-    "rollup-plugin-svelte": "^4.2.1",
+    "rollup-plugin-svelte": "^4.3.0",
     "rollup-plugin-uglify": "^5.0.2",
     "rollup-plugin-virtual": "^1.0.1",
-    "rollup": "^0.65.0",
     "shelljs": "^0.8.2",
     "style-loader": "^0.23.0",
-    "stylelint-config-standard": "^18.2.0",
     "stylelint": "^9.5.0",
+    "stylelint-config-standard": "^18.2.0",
+    "svelte": "^2.13.2",
     "svelte-extras": "^2.0.2",
     "svelte-loader": "^2.11.0",
-    "svelte-preprocess": "^2.2.4",
-    "svelte": "^2.13.2",
+    "svelte-page": "^0.0.6",
+    "svelte-preprocess": "^2.3.1",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^1.1.1",
+    "webpack": "^4.17.2",
     "webpack-archive-plugin": "^3.0.0",
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.7",
     "webpack-merge": "^4.1.4",
     "webpack-sources": "^1.2.0",
-    "webpack": "^4.17.1",
     "xmlbuilder": "^10.0.0",
     "yargonaut": "^1.1.4",
     "yargs": "^12.0.1"
