--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,8 +18,8 @@
   "html.validate.styles": false,
 
   /** Disable svelte-vscode linters */
-  "svelte.plugin.css.enable": false,
-  "svelte.plugin.typescript.enable": false,
+  "svelte.plugin.css.diagnostics.enable": false,
+  "svelte.plugin.typescript.diagnostics.enable": false,
   "svelte.plugin.html.format.enable": false,
 
   /** Auto-fix on save */
