--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,15 +25,6 @@
   "svelte.plugin.typescript.diagnostics.enable": false,
   "svelte.plugin.html.format.enable": false,
 
-  /** Auto-fix on save */
-  "eslint.autoFixOnSave": true,
-  /** Validate html/svelte files */
-  "eslint.validate": [
-    { "language": "javascript", "autoFix": true },
-    { "language": "html", "autoFix": true },
-    { "language": "svelte", "autoFix": true }
-  ],
-
   /** Associate css files to postcss language */
   "files.associations": {
     "*.css": "postcss"
@@ -46,24 +37,29 @@
   "emmet.syntaxProfiles": {
     "postcss": "css"
   },
-
+  /** Enable auto format */
   "[svelte]": {
     "editor.formatOnSave": true
   },
-
   "[html]": {
     "editor.formatOnSave": true
   },
-
   "[javascript]": {
     "editor.formatOnSave": true
   },
-
   "[css]": {
     "editor.formatOnSave": true
   },
-
   "[postcss]": {
     "editor.formatOnSave": true
   },
+
+  /** Auto-fix on save */
+  "eslint.autoFixOnSave": true,
+  /** Validate html/svelte files */
+  "eslint.validate": [
+    { "language": "javascript", "autoFix": true },
+    { "language": "html", "autoFix": true },
+    { "language": "svelte", "autoFix": true }
+  ],
 }
