--- a/packages/configs/package.json
+++ b/packages/configs/package.json
@@ -8,17 +8,18 @@
   ],
   "license": "Apache-2.0",
   "peerDependencies": {
-    "@babel/core": "^7.0.0",
+    "@babel/core": "^7.0.1",
     "eslint": "^5.5.0",
     "postcss": "^7.0.2",
     "prettier": "^1.14.2",
     "stylelint": "^9.5.0",
-    "svelte-preprocess": "^2.3.1"
+    "svelte-preprocess": "^2.3.2"
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
+    "@tivac/eslint-plugin-svelte": "^1.2.1",
     "babel-eslint": "^9.0.0",
     "css-mqpacker": "^7.0.0",
     "eslint-config-airbnb-base": "^13.1.0",
@@ -28,14 +29,14 @@
     "eslint-plugin-jest": "^21.22.0",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-prettier": "^2.6.2",
-    "eslint-plugin-promise": "^4.0.0",
+    "eslint-plugin-promise": "^4.0.1",
     "postcss-advanced-variables": "^2.3.3",
     "postcss-atroot": "^0.1.3",
     "postcss-calc": "^6.0.1",
     "postcss-easy-import": "^3.0.0",
     "postcss-extend-rule": "^2.0.0",
     "postcss-html": "^0.33.0",
-    "postcss-nested": "^3.0.0",
+    "postcss-nested": "^4.1.0",
     "postcss-preset-env": "^5.3.0",
     "postcss-property-lookup": "^2.0.0",
     "postcss-reporter": "^6.0.0",
