--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mambasdk",
-  "version": "1.0.0-prealpha.4",
+  "version": "1.0.0-prealpha.5",
   "description": "SDK for developing in the Mamba web environment",
   "repository": "https://github.com/stone-payments/pos-mamba-web.git",
   "author": "Stone Payments - Mamba Team",
@@ -69,16 +69,17 @@
   },
   "dependencies": {
     "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
+    "@babel/core": "^7.0.1",
     "@babel/node": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-transform-modules-commonjs": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@gen/rollup-plugin-generate-html": "^0.1.1",
+    "@tivac/eslint-plugin-svelte": "^1.2.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^9.0.0",
-    "babel-jest": "^23.4.2",
+    "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.2",
     "case": "^1.5.5",
     "chalk": "^2.4.1",
@@ -95,16 +96,16 @@
     "eslint-plugin-jest": "^21.22.0",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-prettier": "^2.6.2",
-    "eslint-plugin-promise": "^4.0.0",
+    "eslint-plugin-promise": "^4.0.1",
     "file-loader": "^2.0.0",
-    "filemanager-webpack-plugin": "^2.0.4",
+    "filemanager-webpack-plugin": "^2.0.5",
     "globby": "^8.0.1",
     "html-loader": "^0.5.5",
     "html-minifier": "^3.5.20",
     "husky": "^0.15.0-rc.13",
     "identity-obj-proxy": "^3.0.0",
     "inquirer": "^6.2.0",
-    "jest": "^23.5.0",
+    "jest": "^23.6.0",
     "jsbarcode": "^3.11.0",
     "json-loader": "^0.5.7",
     "lint-staged": "^7.2.2",
@@ -112,7 +113,7 @@
     "mini-html-webpack-plugin": "^0.2.3",
     "ncp": "^2.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "page": "^1.8.6",
+    "page": "^1.10.1",
     "pkg-dir": "^3.0.0",
     "postcss": "^7.0.2",
     "postcss-advanced-variables": "^2.3.3",
@@ -123,7 +124,7 @@
     "postcss-extend-rule": "^2.0.0",
     "postcss-html": "^0.33.0",
     "postcss-loader": "^3.0.0",
-    "postcss-nested": "^3.0.0",
+    "postcss-nested": "^4.1.0",
     "postcss-preset-env": "^5.3.0",
     "postcss-property-lookup": "^2.0.0",
     "postcss-reporter": "^6.0.0",
@@ -132,9 +133,9 @@
     "progress-bar-webpack-plugin": "^1.11.0",
     "qrious": "^4.0.2",
     "quickenv": "^0.0.6",
-    "resolve-url-loader": "^2.3.0",
+    "resolve-url-loader": "^2.3.1",
     "rimraf": "^2.6.2",
-    "rollup": "^0.65.0",
+    "rollup": "^0.65.2",
     "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-clear": "^2.0.7",
     "rollup-plugin-commonjs": "^9.1.6",
@@ -154,22 +155,22 @@
     "style-loader": "^0.23.0",
     "stylelint": "^9.5.0",
     "stylelint-config-standard": "^18.2.0",
-    "svelte": "^2.13.2",
+    "svelte": "^2.13.4",
     "svelte-extras": "^2.0.2",
     "svelte-loader": "^2.11.0",
-    "svelte-page": "^0.0.6",
-    "svelte-preprocess": "^2.3.1",
+    "svelte-page": "^0.1.0",
+    "svelte-preprocess": "^2.3.2",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^1.1.1",
-    "webpack": "^4.17.2",
+    "webpack": "^4.18.0",
     "webpack-archive-plugin": "^3.0.0",
-    "webpack-bundle-analyzer": "^2.13.1",
+    "webpack-bundle-analyzer": "^3.0.2",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.7",
+    "webpack-dev-server": "^3.1.8",
     "webpack-merge": "^4.1.4",
     "webpack-sources": "^1.2.0",
     "xmlbuilder": "^10.0.0",
     "yargonaut": "^1.1.4",
-    "yargs": "^12.0.1"
+    "yargs": "^12.0.2"
   }
 }
