--- a/packages/components/Icon/package.json
+++ b/packages/components/Icon/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/icon",
-  "version": "1.0.0-prealpha.12",
+  "version": "1.0.0-alpha.1",
   "svelte": "Icon.html",
   "author": "Stone Payments - Mamba Team",
   "contributors": [
@@ -14,6 +14,6 @@
     "build:dev": "exit 0"
   },
   "dependencies": {
-    "@mamba/styles": "^1.0.0-prealpha.12"
+    "@mamba/styles": "^1.0.0-alpha.1"
   }
 }
