--- a/packages/pos/package.json
+++ b/packages/pos/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/pos",
-  "version": "1.0.0-prealpha.12",
+  "version": "1.0.0-alpha.1",
   "description": "Mamba web environment wrapper and simulator",
   "author": "Stone Payments - Mamba Team",
   "contributors": [
@@ -14,7 +14,7 @@
     "prepublishOnly": "exit 0; npm run build"
   },
   "dependencies": {
-    "@mamba/app": "^1.0.0-prealpha.12",
-    "@mamba/switch": "^1.0.0-prealpha.12"
+    "@mamba/app": "^1.0.0-alpha.1",
+    "@mamba/switch": "^1.0.0-alpha.1"
   }
 }
