--- a/packages/components/Switch/package.json
+++ b/packages/components/Switch/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/switch",
-  "version": "1.0.0-alpha.1",
+  "version": "1.0.0-prealpha.13",
   "svelte": "Switch.html",
   "author": "Stone Payments - Mamba Team",
   "contributors": [
@@ -14,6 +14,6 @@
     "build:dev": "exit 0"
   },
   "devDependencies": {
-    "@mamba/styles": "^1.0.0-alpha.1"
+    "@mamba/styles": "^1.0.0-prealpha.13"
   }
 }
