Fix appbar isAtHome typo

--- a/packages/components/App/package.json
+++ b/packages/components/App/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/app",
-  "version": "1.0.0-prealpha.13",
+  "version": "1.0.0-rc.1",
   "svelte": "App.html",
   "author": "Stone Payments - Mamba Team",
   "contributors": [
@@ -13,10 +13,10 @@
     "build:dev": "exit 0"
   },
   "devDependencies": {
-    "@mamba/styles": "^1.0.0-prealpha.13"
+    "@mamba/styles": "^1.0.0-rc.1"
   },
   "peerDependencies": {
-    "@mamba/pos": "^1.0.0-prealpha.13",
+    "@mamba/pos": "^1.0.0-rc.1",
     "svelte-page": "^1.0.1"
   }
 }
