--- a/packages/components/Dialog/package.json
+++ b/packages/components/Dialog/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/dialog",
-  "version": "1.0.0-prealpha.13",
+  "version": "1.0.0-rc.1",
   "svelte": "Dialog.html",
   "author": "Stone Payments - Mamba Team",
   "contributors": [
@@ -13,10 +13,10 @@
     "build:dev": "exit 0"
   },
   "devDependencies": {
-    "@mamba/sprite": "^1.0.0-prealpha.13"
+    "@mamba/sprite": "^1.0.0-rc.1"
   },
   "dependencies": {
-    "@mamba/styles": "^1.0.0-prealpha.13",
-    "@mamba/icon": "^1.0.0-prealpha.13"
+    "@mamba/styles": "^1.0.0-rc.1",
+    "@mamba/icon": "^1.0.0-rc.1"
   }
 }
