--- a/packages/components/Sprite/package.json
+++ b/packages/components/Sprite/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/sprite",
-  "version": "1.0.0-prealpha.13",
+  "version": "1.0.0-rc.1",
   "svelte": "Sprite.html",
   "author": "Stone Payments - Mamba Team",
   "contributors": [
@@ -13,6 +13,6 @@
     "build:dev": "exit 0"
   },
   "devDependencies": {
-    "@mamba/styles": "^1.0.0-prealpha.13"
+    "@mamba/styles": "^1.0.0-rc.1"
   }
 }
