--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -7,6 +7,9 @@
     "Christian Kaisermann <christian.kaisermann@stone.com.br>"
   ],
   "license": "Apache-2.0",
+  "publishConfig": {
+    "access": "public"
+  },
   "bin": {
     "mamba": "src/cli.js"
   },
