--- a/packages/configs/package.json
+++ b/packages/configs/package.json
@@ -7,6 +7,9 @@
     "Christian Kaisermann <christian.kaisermann@stone.com.br>"
   ],
   "license": "Apache-2.0",
+  "publishConfig": {
+    "access": "public"
+  },
   "peerDependencies": {
     "@babel/core": "^7.0.1",
     "eslint": "^5.5.0",
