--- a/packages/pos/package.json
+++ b/packages/pos/package.json
@@ -8,10 +8,8 @@
     "Pedro Lancelloti Kaisermann <pedro.lancelloti@stone.com.br>"
   ],
   "license": "Apache-2.0",
-  "scripts": {
-    "start": "exit 0; babel --watch --config-file ../configs/babel/sdk.js -d ./ src/",
-    "build": "exit 0; babel --config-file ../configs/babel/sdk.js -d ./ src/",
-    "prepublishOnly": "exit 0; npm run build"
+  "publishConfig": {
+    "access": "public"
   },
   "dependencies": {
     "@mamba/app": "^1.0.0-rc.3",
