--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -7,13 +7,16 @@
     "Christian Kaisermann <christian.kaisermann@stone.com.br>"
   ],
   "license": "Apache-2.0",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "yarn build:pos && yarn run build:desktop",
+    "build": "npm run build:pos && npm run build:desktop",
     "build:pos": "postcss ./pos.pcss -o ./dist/pos.css --verbose",
     "build:desktop": "postcss ./desktop.pcss -o ./dist/desktop.css --verbose",
     "postbuild": "ncp src/assets dist/assets",
-    "start": "yarn run start:pos",
+    "start": "npm run start:pos",
     "start:pos": "postcss ./pos.pcss -o ./dist/pos.css -w --verbose",
     "start:desktop": "postcss ./desktop.pcss -o ./dist/desktop.css -w --verbose",
     "test": "exit 0"
@@ -22,5 +25,8 @@
     "ncp": "^2.0.0",
     "postcss-cli": "^6.0.0",
     "rimraf": "^2.6.2"
+  },
+  "dependencies": {
+    "lerna": "^3.4.0"
   }
 }
