--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0-rc.3",
+  "version": "1.0.0-rc.4",
   "command": {
     "publish": {
       "ignoreChanges": [
@@ -14,16 +14,16 @@
     }
   },
   "packages": [
-    "packages/cli",
-    "packages/utils",
-    "packages/signal",
     "packages/api",
-    "packages/pos",
     "packages/bridges",
+    "packages/cli",
+    "packages/components/*",
+    "packages/configs",
+    "packages/pos",
+    "packages/signal",
     "packages/store",
     "packages/styles",
-    "packages/configs",
-    "packages/webpack",
-    "packages/components/*"
+    "packages/utils",
+    "packages/webpack"
   ]
 }
