--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -24,5 +24,6 @@
     "quickenv": "^0.0.6",
     "yargonaut": "^1.1.4",
     "yargs": "^12.0.2"
-  }
+  },
+  "gitHead": "7118f44e933d2f656166a80822c0b3c1001e6a33"
 }
