--- a/packages/components/App/package.json
+++ b/packages/components/App/package.json
@@ -19,5 +19,6 @@
   "peerDependencies": {
     "@mamba/pos": "^1.0.0-rc.3",
     "svelte-page": "^1.0.1"
-  }
+  },
+  "gitHead": "7118f44e933d2f656166a80822c0b3c1001e6a33"
 }
