--- a/packages/components/Button/package.json
+++ b/packages/components/Button/package.json
@@ -19,5 +19,6 @@
   },
   "dependencies": {
     "@mamba/styles": "^1.0.0-rc.4"
-  }
+  },
+  "gitHead": "7118f44e933d2f656166a80822c0b3c1001e6a33"
 }
