--- a/packages/components/AppBar/package.json
+++ b/packages/components/AppBar/package.json
@@ -21,5 +21,6 @@
   "peerDependencies": {
     "@mamba/styles": "^1.0.0-rc.3",
     "svelte-page": "^1.0.1"
-  }
+  },
+  "gitHead": "7118f44e933d2f656166a80822c0b3c1001e6a33"
 }
