--- a/packages/configs/package.json
+++ b/packages/configs/package.json
@@ -45,5 +45,6 @@
     "postcss-reporter": "^6.0.0",
     "postcss-syntax": "^0.33.0",
     "stylelint-config-standard": "^18.2.0"
-  }
+  },
+  "gitHead": "7118f44e933d2f656166a80822c0b3c1001e6a33"
 }
