--- a/packages/pos/package.json
+++ b/packages/pos/package.json
@@ -14,5 +14,6 @@
   "dependencies": {
     "@mamba/app": "^1.0.0-rc.4",
     "@mamba/switch": "^1.0.0-rc.4"
-  }
+  },
+  "gitHead": "7118f44e933d2f656166a80822c0b3c1001e6a33"
 }
