--- a/packages/components/App/package.json
+++ b/packages/components/App/package.json
@@ -14,10 +14,12 @@
     "start": "rollup -c ../../../tools/rollup/config.component.watch.js -w"
   },
   "devDependencies": {
-    "@mamba/styles": "^1.0.0-rc.4"
+    "@mamba/styles": "^1.0.0-rc.4",
+    "@mamba/pos": "^1.0.0-rc.4",
+    "svelte-page": "^1.0.1"
   },
   "peerDependencies": {
-    "@mamba/pos": "^1.0.0-rc.3",
+    "@mamba/pos": "^1.0.0-rc.4",
     "svelte-page": "^1.0.1"
   },
   "gitHead": "7118f44e933d2f656166a80822c0b3c1001e6a33"
