--- a/packages/components/AppBar/package.json
+++ b/packages/components/AppBar/package.json
@@ -19,8 +19,11 @@
     "@mamba/store": "^1.0.0-rc.4"
   },
   "peerDependencies": {
-    "@mamba/styles": "^1.0.0-rc.3",
+    "@mamba/styles": "^1.0.0-rc.4",
     "svelte-page": "^1.0.1"
   },
-  "gitHead": "7118f44e933d2f656166a80822c0b3c1001e6a33"
+  "devDependencies": {
+    "@mamba/styles": "^1.0.0-rc.4",
+    "svelte-page": "^1.0.1"
+  }
 }
