--- a/packages/components/Input/package.json
+++ b/packages/components/Input/package.json
@@ -14,13 +14,14 @@
     "start": "rollup -c ../../../tools/rollup/config.component.watch.js -w"
   },
   "devDependencies": {
-    "@mamba/styles": "^1.0.0-rc.4"
+    "@mamba/styles": "^1.0.0-rc.4",
+    "@mamba/pos": "^1.0.0-rc.4"
+  },
+  "peerDependencies": {
+    "@mamba/pos": "^1.0.0-rc.4"
   },
   "dependencies": {
     "@mamba/icon": "^1.0.0-rc.4"
-  },
-  "peerDependencies": {
-    "@mamba/pos": "^1.0.0-rc.3"
   },
   "gitHead": "7118f44e933d2f656166a80822c0b3c1001e6a33"
 }
