--- a/package.json
+++ b/package.json
@@ -151,8 +151,6 @@
     "webpack-dev-server": "^3.1.9",
     "webpack-merge": "^4.1.4",
     "webpack-sources": "^1.3.0",
-    "xmlbuilder": "^10.0.0",
-    "yargonaut": "^1.1.4",
-    "yargs": "^12.0.2"
+    "xmlbuilder": "^10.0.0"
   }
 }
