--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -48,6 +48,7 @@
     "webpack-dev-server": "^3.1.9",
     "webpack-merge": "^4.1.4",
     "webpack-sources": "^1.3.0",
+    "webpack-virtual-modules": "^0.1.10",
     "xmlbuilder": "^10.0.0"
   },
   "gitHead": "91a8a4a8be4741a15249462cefda6e273f1613a3"
