--- a/packages/pos/package.json
+++ b/packages/pos/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@mamba/app": "^1.0.0-rc.10",
+    "@mamba/styles": "^1.0.0-rc.10",
     "@mamba/switch": "^1.0.0-rc.10"
   },
   "gitHead": "7118f44e933d2f656166a80822c0b3c1001e6a33"
