--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "lint:css": "stylelint \"packages/**/*.{html,svelte,css,pcss}\"",
     "format": "npm run format:css; npm run format:js",
     "format:js": "prettier --write \"*.js\" \"{tools,packages}/**/*.js\" && eslint --fix \"*.js\" \"{tools,packages}/**/*.{js,html,svelte}\"",
-    "format:css": "prettier --write \"packages/**/*.{css,pcss}\" && stylelint --fix \"packages/**/*.{html,svelte,css,pcss}\""
+    "format:css": "prettier --write \"packages/**/*.{css,pcss}\" && stylelint --fix \"packages/**/*.{html,svelte,css,pcss}\"",
+    "postinstall": "lerna bootstrap"
   },
   "husky": {
     "hooks": {
@@ -48,109 +49,38 @@
       ]
     }
   },
-  "dependencies": {
-    "@babel/cli": "^7.1.0",
-    "@babel/core": "^7.1.0",
-    "@babel/node": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-transform-modules-commonjs": "^7.1.0",
-    "@babel/preset-env": "^7.1.0",
+  "devDependencies": {
     "@gen/rollup-plugin-generate-html": "^0.1.1",
-    "@tivac/eslint-plugin-svelte": "^1.2.1",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^10.0.0",
+    "@mamba/configs": "^1.0.0-rc.10",
     "babel-jest": "^23.6.0",
-    "babel-loader": "^8.0.2",
     "case": "^1.5.5",
-    "chalk": "^2.4.1",
     "cross-env": "^5.2.0",
-    "css-loader": "^1.0.0",
-    "css-mqpacker": "^7.0.0",
-    "cssnano": "^4.1.1",
     "eslint": "^5.6.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-config-prettier": "^3.1.0",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-html": "^4.0.6",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jest": "^21.22.1",
-    "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-prettier": "^2.6.2",
-    "eslint-plugin-promise": "^4.0.1",
-    "file-loader": "^2.0.0",
-    "filemanager-webpack-plugin": "^2.0.5",
     "globby": "^8.0.1",
-    "html-loader": "^0.5.5",
     "html-minifier": "^3.5.20",
-    "husky": "^1.0.0-rc.15",
     "identity-obj-proxy": "^3.0.0",
-    "inquirer": "^6.2.0",
     "jest": "^23.6.0",
-    "jsbarcode": "^3.11.0",
-    "json-loader": "^0.5.7",
     "lerna": "^3.4.0",
+    "lerna-changelog": "^0.8.0",
     "lerna-wizard": "^1.0.9",
     "lint-staged": "^7.3.0",
-    "mini-css-extract-plugin": "^0.4.3",
-    "mini-html-webpack-plugin": "^0.2.3",
-    "ncp": "^2.0.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "page": "^1.10.2",
-    "pkg-dir": "^3.0.0",
     "postcss": "^7.0.2",
-    "postcss-advanced-variables": "^2.3.3",
-    "postcss-atroot": "^0.1.3",
-    "postcss-calc": "^6.0.1",
-    "postcss-cli": "^6.0.0",
-    "postcss-easy-import": "^3.0.0",
-    "postcss-extend-rule": "^2.0.0",
-    "postcss-html": "^0.34.0",
-    "postcss-loader": "^3.0.0",
-    "postcss-nested": "^4.1.0",
-    "postcss-preset-env": "^6.0.6",
-    "postcss-property-lookup": "^2.0.0",
-    "postcss-reporter": "^6.0.0",
-    "postcss-syntax": "^0.34.0",
     "prettier": "^1.14.3",
-    "progress-bar-webpack-plugin": "^1.11.0",
-    "qrious": "^4.0.2",
     "quickenv": "^0.0.6",
-    "resolve-url-loader": "^3.0.0",
-    "rimraf": "^2.6.2",
     "rollup": "^0.66.2",
     "rollup-plugin-babel": "^4.0.3",
-    "rollup-plugin-clear": "^2.0.7",
     "rollup-plugin-commonjs": "^9.1.8",
     "rollup-plugin-copy": "^0.2.3",
-    "rollup-plugin-eslint": "^5.0.0",
     "rollup-plugin-filesize": "^4.0.1",
-    "rollup-plugin-fill-html": "^1.1.0",
     "rollup-plugin-livereload": "^0.6.0",
     "rollup-plugin-node-resolve": "^3.4.0",
-    "rollup-plugin-rebase": "^2.0.4",
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-serve": "^0.6.0",
     "rollup-plugin-svelte": "^4.3.1",
-    "rollup-plugin-uglify": "^6.0.0",
     "rollup-plugin-virtual": "^1.0.1",
-    "style-loader": "^0.23.0",
     "stylelint": "^9.5.0",
-    "stylelint-config-standard": "^18.2.0",
+    "babel-core": "^6.26.3",
     "svelte": "^2.13.5",
-    "svelte-extras": "^2.0.2",
-    "svelte-loader": "^2.11.0",
-    "svelte-page": "^1.2.1",
-    "svelte-preprocess": "^2.3.2",
-    "uglifyjs-webpack-plugin": "^2.0.1",
-    "url-loader": "^1.1.1",
-    "webpack": "^4.19.1",
-    "webpack-archive-plugin": "^3.0.0",
-    "webpack-bundle-analyzer": "^3.0.2",
-    "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.1.9",
-    "webpack-merge": "^4.1.4",
-    "webpack-sources": "^1.3.0",
-    "xmlbuilder": "^10.0.0"
+    "svelte-preprocess": "^2.3.2"
   }
 }
