--- a/packages/components/AppBar/package.json
+++ b/packages/components/AppBar/package.json
@@ -23,6 +23,7 @@
     "svelte-page": "^1.2.1"
   },
   "devDependencies": {
+    "@mamba/pos": "^1.0.0-rc.10",
     "@mamba/styles": "^1.0.0-rc.10",
     "svelte-page": "^1.2.1"
   }
