--- a/packages/components/Collection/package.json
+++ b/packages/components/Collection/package.json
@@ -14,6 +14,7 @@
     "start": "rollup -c ../../../tools/rollup/config.component.watch.js -w"
   },
   "devDependencies": {
+    "@mamba/pos": "^1.0.0-rc.10",
     "svelte-page": "^1.2.1"
   },
   "peerDependencies": {
