--- a/packages/components/Dialog/package.json
+++ b/packages/components/Dialog/package.json
@@ -14,6 +14,7 @@
     "start": "rollup -c ../../../tools/rollup/config.component.watch.js -w"
   },
   "devDependencies": {
+    "@mamba/pos": "^1.0.0-rc.10",
     "@mamba/sprite": "^1.0.0-rc.10"
   },
   "dependencies": {
