--- a/packages/components/Switch/package.json
+++ b/packages/components/Switch/package.json
@@ -15,6 +15,7 @@
     "start": "rollup -c ../../../tools/rollup/config.component.watch.js -w"
   },
   "devDependencies": {
+    "@mamba/pos": "^1.0.0-rc.10",
     "@mamba/styles": "^1.0.0-rc.10"
   },
   "gitHead": "7118f44e933d2f656166a80822c0b3c1001e6a33"
