--- a/packages/components/App/package.json
+++ b/packages/components/App/package.json
@@ -15,12 +15,10 @@
   },
   "devDependencies": {
     "@mamba/pos": "^1.0.0-rc.11",
-    "@mamba/styles": "^1.0.0-rc.11",
-    "svelte-page": "^1.2.2"
+    "@mamba/styles": "^1.0.0-rc.11"
   },
   "peerDependencies": {
-    "@mamba/pos": "^1.0.0-rc.11",
-    "svelte-page": "^1.2.2"
+    "@mamba/pos": "^1.0.0-rc.11"
   },
   "gitHead": "7118f44e933d2f656166a80822c0b3c1001e6a33"
 }
