--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,23 @@
+os:
+  - linux
+  - osx
+
 language: node_js
 
 node_js:
-  - "8"
-  - "node"
+  - node
+  - '9'
+  - '8'
+
+cache:
+  directories:
+  - "$HOME/.npm"
+
+before_install:
+  - npm config set loglevel warn
+  - npm install --global npm@latest
 
 install:
-  - export DISPLAY=':99.0'
-  - Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
   - npm ci || npm install
 
 script:
