Add initial tests and basic coverage (#247)
* Add first component test :tada:

* Allow console.log's to appear in jest

* Add basic tests for switch component

* Add basic tests for sprite component

* Add test:watch

* Add jest-canvas-mock to setupfiles and jest-canvas-mock module.

* Add QRCode tests.

* Ignore lines for test.

* Add icon component test.

* Add simulator to test setup. Add printable initial tests.

* Fix printable tests overlapping each other

* Remove extra event listeners for dialogs

* Add tests for Dialogs

* Stop npm warning

* Prevent eslint from warning about extraneous dependencies on
virtual-files

* Branch up

* Add ProgressBar test file

* Add src check test

* Add tests for multiple logo and size combinations

* Normalize test variable names

* Add round icon tests and fix.

* Add collection test.

* Fix collection test suite

* Fix collection test suite

* Create ProgressBar test

* Create better describes

* Move keystroke register logic to external js

* Add tests for <Keystroke />

* Update Progressbar test

* Fix Keystroke test

* Create the most basic test ever for ~circular component~

* Add <App/> tests

* Check if currentApp is defined before closing an app

* Add switch component as dev dependency

* Fix fire event triggering after click handle

* WIP: add Row test.

* Fix compiling of Screen.html

* Update dependencies

* Add .toggle() method to <Switch/>

* Better coverage for Row

* WIP: Add appbar and modifier tests.

* Align progress tests with rest of component tests

* Fix coverage issues on App, Printable and QRCOde

* Switch meta events with meta methods

* Deprecate root events in favour of methods

* WIP: dummy app component.

* WIP: AppBar tests.

* [WIP] Make tests pass again. Vai que é tua lancelloti

* Fix dummy app and tested component initialization event cycles

* Convert sprite test to new env

* Fix dummy a

--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "format": "npm run format:css; npm run format:js",
     "format:js": "prettier --write \"*.js\" \"{tools,packages}/**/*.js\" && eslint --fix \"*.js\" \"{tools,packages}/**/*.{js,html,svelte}\"",
     "format:css": "prettier --write \"packages/**/*.{css,pcss}\" && stylelint --fix \"packages/**/*.{html,svelte,css,pcss}\"",
-    "postinstall": "lerna bootstrap --hoist --no-ci"
+    "postinstall": "lerna bootstrap --hoist --no-ci",
+    "test": "jest",
+    "test:watch": "jest --watchAll"
   },
   "husky": {
     "hooks": {
@@ -49,18 +51,24 @@
     }
   },
   "devDependencies": {
+    "@babel/core": "^7.1.2",
     "@gen/rollup-plugin-generate-html": "^0.1.1",
     "@mamba/configs": "file:packages/configs",
-    "babel-core": "^6.26.3",
+    "@mamba/app": "file:packages/components/App",
+    "@mamba/pos": "file:packages/pos",
+    "@mamba/switch": "file:packages/components/Switch",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "case": "^1.5.5",
     "cross-env": "^5.2.0",
+    "deasync": "^0.1.13",
     "eslint": "^5.8.0",
     "globby": "^8.0.1",
     "html-minifier": "^3.5.21",
     "husky": "^1.1.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
+    "jest-canvas-mock": "^1.1.0",
     "lerna": "^3.4.3",
     "lerna-wizard": "^1.0.9",
     "lint-staged": "^8.0.4",
@@ -81,6 +89,6 @@
     "rollup-plugin-virtual": "^1.0.1",
     "stylelint": "^9.7.1",
     "svelte": "^2.15.1",
-    "svelte-preprocess": "^2.3.2"
+    "svelte-preprocess": "^2.4.0"
   }
 }
