--- a/packages/components/AppBar/package.json
+++ b/packages/components/AppBar/package.json
@@ -19,7 +19,7 @@
     "@mamba/store": "^1.0.0-rc.29"
   },
   "peerDependencies": {
-    "@mamba/styles": "^1.0.0-rc.11"
+    "@mamba/styles": "^2.0.0"
   },
   "devDependencies": {
     "@mamba/pos": "^1.0.0-rc.29",
