--- a/packages/components/App/package.json
+++ b/packages/components/App/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/app",
-  "version": "1.0.0-rc.29",
+  "version": "2.0.0",
   "svelte": "App.html",
   "author": "Stone Payments - Mamba Team",
   "contributors": [
@@ -14,8 +14,8 @@
     "start": "rollup -c ../../../tools/rollup/config.component.watch.js -w"
   },
   "devDependencies": {
-    "@mamba/pos": "^1.0.0-rc.29",
-    "@mamba/styles": "^1.0.0-rc.29"
+    "@mamba/pos": "^2.0.0",
+    "@mamba/styles": "^2.0.0"
   },
   "peerDependencies": {
     "@mamba/pos": "^2.0.0"
