--- a/packages/components/AppBar/package.json
+++ b/packages/components/AppBar/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/appbar",
-  "version": "1.0.0-rc.29",
+  "version": "2.0.0",
   "svelte": "AppBar.html",
   "author": "Stone Payments - Mamba Team",
   "contributors": [
@@ -15,14 +15,14 @@
     "start": "rollup -c ../../../tools/rollup/config.component.watch.js -w"
   },
   "dependencies": {
-    "@mamba/icon": "^1.0.0-rc.29",
-    "@mamba/store": "^1.0.0-rc.29"
+    "@mamba/icon": "^2.0.0",
+    "@mamba/store": "^2.0.0"
   },
   "peerDependencies": {
     "@mamba/styles": "^2.0.0"
   },
   "devDependencies": {
-    "@mamba/pos": "^1.0.0-rc.29",
-    "@mamba/styles": "^1.0.0-rc.29"
+    "@mamba/pos": "^2.0.0",
+    "@mamba/styles": "^2.0.0"
   }
 }
