--- a/packages/components/Collection/package.json
+++ b/packages/components/Collection/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/collection",
-  "version": "1.0.0-rc.29",
+  "version": "2.0.0",
   "svelte": "Collection.html",
   "author": "Stone Payments - Mamba Team",
   "contributors": [
@@ -14,12 +14,12 @@
     "start": "rollup -c ../../../tools/rollup/config.component.watch.js -w"
   },
   "devDependencies": {
-    "@mamba/pos": "^1.0.0-rc.29",
-    "@mamba/switch": "^1.0.0-rc.29"
+    "@mamba/pos": "^2.0.0",
+    "@mamba/switch": "^2.0.0"
   },
   "dependencies": {
-    "@mamba/icon": "^1.0.0-rc.29",
-    "@mamba/styles": "^1.0.0-rc.29"
+    "@mamba/icon": "^2.0.0",
+    "@mamba/styles": "^2.0.0"
   },
   "gitHead": "7118f44e933d2f656166a80822c0b3c1001e6a33"
 }
