--- a/packages/configs/package.json
+++ b/packages/configs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/configs",
-  "version": "1.0.0-rc.29",
+  "version": "2.0.0",
   "description": "Tool config presets for use in mamba projects.",
   "author": "Stone Payments - Mamba Team",
   "contributors": [
@@ -19,8 +19,8 @@
     "svelte-preprocess": "^2.4.3"
   },
   "peerDependencies": {
-    "@mamba/pos": "^2.0.0",
     "@babel/core": "^7.2.0",
+    "@mamba/pos": "^2.0.0",
     "eslint": "^5.10.0",
     "postcss": "^7.0.6",
     "prettier": "^1.15.3",
