--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/styles",
-  "version": "1.0.0-rc.29",
+  "version": "2.0.0",
   "description": "Mamba core and reset styles",
   "author": "Stone Payments - Mamba Team",
   "contributors": [
