--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@mamba/app": "file:packages/components/App",
     "@mamba/configs": "file:packages/configs",
     "@mamba/pos": "file:packages/pos",
+    "@mamba/styles": "file:packages/styles",
     "@mamba/switch": "file:packages/components/Switch",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
@@ -65,14 +66,12 @@
     "cross-env": "^5.2.0",
     "deasync": "^0.1.14",
     "eslint": "^5.11.1",
-    "globby": "^8.0.1",
     "html-minifier": "^3.5.21",
     "husky": "^1.3.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
     "jest-canvas-mock": "^1.1.0",
     "lerna": "^3.8.4",
-    "lerna-wizard": "^1.0.9",
     "lint-staged": "^8.1.0",
     "postcss": "^7.0.7",
     "prettier": "^1.15.3",
