--- a/package.json
+++ b/package.json
@@ -16,21 +16,24 @@
     "npm": ">= 5.6.0"
   },
   "scripts": {
-    "link:packages": "lerna exec npm link",
     "lint": "npm run lint:css; npm run lint:js",
     "lint:js": "eslint \"*.js\" \"{tools,packages}/**/*.{js,html,svelte}\"",
     "lint:css": "stylelint \"packages/**/*.{html,svelte,css,pcss}\"",
     "format": "npm run format:css; npm run format:js",
     "format:js": "prettier --write \"*.js\" \"{tools,packages}/**/*.js\" && eslint --fix \"*.js\" \"{tools,packages}/**/*.{js,html,svelte}\"",
     "format:css": "prettier --write \"packages/**/*.{css,pcss}\" && stylelint --fix \"packages/**/*.{html,svelte,css,pcss}\"",
-    "postinstall": "lerna bootstrap --hoist --no-ci",
+    "postinstall": "lerna bootstrap --no-ci",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:ci": "jest --no-cache --verbose"
+    "test:ci": "jest --no-cache --verbose",
+    "link:packages": "lerna exec npm link",
+    "version-bump": "lerna publish --skip-git --skip-npm",
+    "semantic-release": "lerna exec --concurrency 1 -- npx --no-install semantic-release -e semantic-release-monorepo"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
   "lint-staged": {
@@ -52,8 +55,15 @@
       ]
     }
   },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
   "devDependencies": {
     "@babel/core": "^7.2.2",
+    "@commitlint/cli": "^7.5.0",
+    "@commitlint/config-conventional": "^7.5.0",
     "@gen/rollup-plugin-generate-html": "^0.1.1",
     "@mamba/app": "file:packages/components/App",
     "@mamba/configs": "file:packages/configs",
@@ -62,9 +72,11 @@
     "@mamba/switch": "file:packages/components/Switch",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
+    "commitizen": "^3.0.5",
     "cross-env": "^5.2.0",
     "deasync": "^0.1.14",
     "eslint": "^5.12.0",
+    "git-cz": "^1.8.0",
     "html-minifier": "^3.5.21",
     "husky": "^1.3.1",
     "identity-obj-proxy": "^3.0.0",
@@ -88,6 +100,8 @@
     "rollup-plugin-svelte": "^5.0.1",
     "rollup-plugin-url": "^2.1.0",
     "rollup-plugin-virtual": "^1.0.1",
+    "semantic-release": "^15.13.3",
+    "semantic-release-monorepo": "^6.1.1",
     "stylelint": "^9.10.0",
     "svelte": "^2.16.0",
     "svelte-preprocess": "^2.4.3"
