refactor: 💡 use @mamba/utils to format money

--- a/packages/components/Input/package.json
+++ b/packages/components/Input/package.json
@@ -21,7 +21,8 @@
     "@mamba/pos": "^2.1.0"
   },
   "dependencies": {
-    "@mamba/icon": "^2.2.0"
+    "@mamba/icon": "^2.2.0",
+    "@mamba/utils": "^2.2.0"
   },
   "gitHead": "7118f44e933d2f656166a80822c0b3c1001e6a33"
 }
